[package]
name = "units"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

[profile.release]
opt-level = 3
lto = true
incremental = false
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "*"
units_macro = {path = "./units_macro"}

[dev-dependencies]
criterion = "0.3"
rand = "*"


[[bench]]
name = "bench_main"
harness = false