[package]
name = "common_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
toml = "0.5.*"
ciborium = { version = "*", features =["std"] }
once_cell = "*"
syn = {version = "*", features = ["extra-traits","derive", "full"]}
proc-macro2 = "*"
